# hjowdy

./: .env.example  .gitignore  Cargo.toml  README.md  create_tables.sql  setup_database.sh
sql/: add_message.sql  create_chat.sql  delete_chat.sql  get_chats.sql  get_messages.sql  get_messages_by_chat_id.sql  save_generated_image.sql  update_chat_name.sql
src/: chat_history.rs  config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs
src/database/: connection.rs  mod.rs  models.rs
src/db/: db.rs
src/handlers/: chat_handlers.rs  image_handlers.rs  message_handlers.rs
src/models/: models.rs
