[package]
name = "hjowdy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
actix-rt = "2.4.0"
actix-http = "3.0.0-beta.5"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.9.0"
dotenv = "0.15.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = {version="0.7.6", features = ["with-chrono-0_4"]}
chrono = { version = "0.4.24", features = ["serde"] }
derive_more = "0.99.16"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = "0.8"
testcontainers = "0.14.0"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[lib]
path = "src/lib.rs"
